Changed contact button to flash instantly, fixed spacing issue on homepage

--- a/agroponics-ubc/src/styles/Main.module.css
+++ b/agroponics-ubc/src/styles/Main.module.css
@@ -170,7 +170,7 @@
 .sponsorUs {
   text-align: center;
   justify-content: center;
-  padding: 10vh;
+  padding: 10vh 0;
 }
 
 .sponsorUs>div {
